--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "lint": "npx eslint --fix",
+    "pret": "npx prettier . --write",
     "babel-node": "babel-node",
     "build": "rimraf dist && cross-env BABEL_ENV=production babel src --out-dir dist",
     "nodemon": "nodemon --exec npm run babel-node -- src/server.js",
@@ -51,10 +52,9 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
