--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "babel-core": "^6.26.3",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -33,12 +33,13 @@
     "mongoose": "^6.0.13",
     "mongoose-paginate-v2": "^1.4.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3",
+    "multer": "^1.4.4",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-http": "^0.3.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
