--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-http": "^0.3.0",
     "rimraf": "^3.0.2",
+    "sharp": "^0.29.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.3.1",
+		"jsdoc": "^3.6.10",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
